[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = ""
edition = "2021"
homepage = "https://github.com/scattered-systems/aqueduct/wiki"
keywords = []
license = "MIT"
name = "aqueduct"
publish = true
readme = "README.md"
repository = "https://github.com/scattered-systems/aqueduct"
version = "0.0.0"

[features]
default = ["core"]
full = ["core"]

core = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
blake3 = "1.3.1"
scsys = { features = ["full"], version = "0.1.24" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
strum = { features = ["derive"], version = "0.24.1" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
