[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "aqueduct is a dynamic encryption mechanism suitable for the dynamic runtime environment empolyed throughout scsys"
edition = "2021"
homepage = "https://github.com/scattered-systems/aqueduct/wiki"
keywords = []
license = "Apache-2.0"
name = "aqueduct"
publish = true
readme = "README.md"
repository = "https://github.com/scattered-systems/aqueduct"
version = "0.0.0"

[features]
default = ["core"]
full = ["core"]

core = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
blake3 = "1.3.1"
scsys = { features = ["full"], version = "0.1.36" }
serde = { features = ["derive"], version = "1.0.149" }
serde_json = "1.0.89"
strum = { features = ["derive"], version = "0.24.1" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
