[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)"]
categories = []
description = ""
edition = "2021"
homepage = "https://gitlab.com/FL03/conduit/-/wiki"
keywords = []
license = "MIT"
name = "conduit-sdk"
publish = true
repository = "https://gitlab.com/FL03/conduit"
version = "0.1.0"

[build-dependencies]

[dependencies]
axum = { features = ["headers", "ws"], version = "0.5.16" }
futures = "0.3.24"
log = "0.4.17"
hyper = { features = ["full"], version = "0.14.20" }
scsys = { features = ["full"], version = "0.1.19" }
serde = { features = ["derive"], version = "1.0.145" }
serde_json = "1.0.85"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["full"], version = "1.21.1" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.4" }
tracing = "0.1.35"
tracing-subscriber = { features = ["env-filter"], version = "0.3.14" }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
